8157038: Move module option handling from java launcher to VM Summary: Reduce maximum number of numbered properties to 1000 and fix comments. Reviewed-by: mchung