@@ -24,7 +24,8 @@
 /*
  * @test
  * @bug 8136930
- * @summary Examine implications for custom launchers, equivalent of java -X options in particular
+ * @summary Test that the VM only recognizes the last specified --add-modules
+ *          and --list-modules options
  * @modules java.base/jdk.internal.misc
  * @library /testlibrary
  */
